--- a/src/components/itemFeatured/ItemFeatured.css
+++ b/src/components/itemFeatured/ItemFeatured.css
@@ -1,8 +1,8 @@
 /* Product card_new */
 .ItemFeatured {
-    width: 112px;
+    width: 120px;
     height: 260px;
-    background-color: rgb(214, 214, 214);
+    background-color: #F9F9F9;
 }
 
 
@@ -31,7 +31,7 @@
 }
 
 .Price {
-
+    padding-top: 10%;
     font-family: Metropolis;
     font-style: normal;
     font-weight: 500;
@@ -41,4 +41,15 @@
     
     text-decoration-line: underline;
     
+}
+
+.img {
+    width: 100px;
+    height: 200px;
+}
+
+.AddFavorite {
+    position: relative;
+    top: -40%;
+    left: 50%;
 }
