--- a/AppHome/App.css
+++ b/AppHome/App.css
@@ -1,25 +1,3 @@
 .App {
-  text-align: center;
-}
-
-.HomeHeader {
-  position: absolute;
-  width: 375px;
-  height: 371px;
-}
-
-.SlideShow {
-  position: absolute;
-  width: 375px;
-  height: 371px;
-  left: -1px;
-  top: 89px;
-}
-
-.HomeFeatured{
-  position: absolute;
-  width: 375px;
-  height: 371px;
-  left: 9px;
-  top: 475px;
+  text-align: left;
 }
