--- a/src/components/pedidoHeader/PedidoHeader.css
+++ b/src/components/pedidoHeader/PedidoHeader.css
@@ -7,11 +7,8 @@ background: #F9F9F9;
 
 .Table {
     width: 375px;
-}
-
-.Chevron {
-    height: 40px;
-    width: 100%;
+    height: 80px;
+    padding-top: 7%;
 }
 
 .Logo {
@@ -22,8 +19,4 @@ background: #F9F9F9;
 
 .ProductName {
     width: 100%;
-}
-
-.Option {
-    height: 50px;
 }
