--- a/src/components/product/Product.css
+++ b/src/components/product/Product.css
@@ -6,9 +6,26 @@
   background-color: beige;
 }
 
+.ProductHeader {
+  height: 80px;
+}
+
 .ProductSpace {
   width: 375px;
   height: 400px;
   
   background-color: white;
 }
+
+table, th, td {
+  border: 1px solid black;
+}
+
+.Table1 {
+  width: 375px;
+}
+
+.Table2 {
+  width: 375px;
+}
+
