--- a/src/components/product/Product.css
+++ b/src/components/product/Product.css
@@ -17,8 +17,9 @@
   background-color: white;
 }
 
-table, th, td {
-  border: 1px solid black;
+.Rating {
+  text-align: right;
+  margin-right: 15px;
 }
 
 .Table1 {
