--- a/src/components/itemPedido/ItemPedido.css
+++ b/src/components/itemPedido/ItemPedido.css
@@ -5,6 +5,9 @@
     width: 315px;
     margin-bottom: 15px;
     border-style: solid;
+    border-radius: 6px;
+    border-width: 1.5px;
+    border-color: darkgrey;
 }
 
 .ID {
@@ -17,7 +20,6 @@
     align-items: center;
     text-align: center;
     margin-bottom: 4px;
-
 }
 
 .Date {    
@@ -31,7 +33,7 @@
     margin-bottom: 4px;
 
     /* Gray */
-    color: #black;
+    color: black;
     
 }
 
@@ -95,4 +97,6 @@
     src: local('Metropolis Regular'), url('Metropolis-Regular.woff') format('woff');
 }
 
-
+.TextBox {
+    margin: 10px;
+}
